--- a/1_data_import.Rmd
+++ b/1_data_import.Rmd
@@ -499,7 +499,6 @@ ggplot(alldata_pregnancy, aes(x=birthorder_uterus_alive, y=birthorder_naive)) + 
 ggplot(alldata_pregnancy, aes(x=birthorder_naive_ind, y=birthorder_naive)) + geom_jitter(alpha = 0.1)
 ggplot(alldata_pregnancy, aes(x=sibling_count_naive_ind, y=sibling_count_naive)) + geom_jitter(alpha = 0.1)
 
-alldata_pregnancy %>% filter(birthorder_naive != birthorder_uterus_alive) %>% select(birthorder_naive,birthorder_naive_ind, birthorder_uterus_alive, sibling_count_uterus_alive, mother_pidlink, birthdate, mother_birthdate) %>% View()
 
 # alldata_pregnancy %>% filter(mother_pidlink == "001060007") %>% select(birthorder_naive,birthorder_naive_ind, birthorder_uterus_alive, sibling_count_naive, sibling_count_uterus_alive, mother_pidlink, birthdate, mother_birthdate) %>% View()
 
@@ -549,11 +548,6 @@ iq2.3 = b3b_cob %>% select(hhid14_9, pidlink, w_abil, cob18, cob19b)
 iq2 = full_join(iq2.1, iq2.2, by = "pidlink")
 iq2 = full_join(iq2, iq2.3, by = "pidlink")
 iq = iq2
-<<<<<<< HEAD
-iq = iq %>% rename(age_2015_old = age, sex_2015_old = sex)
-=======
-iq <- rename(iq, age = IQage) 
->>>>>>> 2783301dafb78ad19b264e61581a0c5b386da73e
 iq = full_join(iq, iq3.1, by = "pidlink")
 
 ### calculate iq scores
@@ -582,12 +576,7 @@ iq$co04eright = as.numeric(iq$co04e == iq$co04d-7)
 
 answered_counting_items = iq %>% select(co04aright:co04eright)
 psych::alpha(data.frame(answered_counting_items))
-<<<<<<< HEAD
 iq$count_backwards = rowMeans( answered_counting_items, na.rm = T)
-=======
-iq$count_backwards = rowSums( answered_counting_items, na.rm = T) / 5
-iq$count_backwards[rowSums( is.na(answered_counting_items)) == 5] = NA_real_
->>>>>>> 2783301dafb78ad19b264e61581a0c5b386da73e
 qplot(iq$count_backwards)
 
 ## Word Memory
@@ -793,34 +782,15 @@ round(cor(iq %>% select(raven_2015_old, math_2015_old, raven_2015_young, math_20
 ##Missingness_Patterns
 formr::missingness_patterns(iq %>% select(raven_2015_old, math_2015_old, raven_2015_young, math_2015_young, count_backwards, words_immediate, words_delayed, adaptive_numbering, raven_2007_old, math_2007_young))
 
-iq %>% select(raven, math, raven_young_2014, math_young_2014, count_backwards, words_immediate, words_delayed, adaptive_numbering, raven2007, math2007) %>% tidyr::gather() %>% 
+iq %>% select(raven_2015_old, math_2015_old, raven_2015_young, math_2015_young, count_backwards, words_immediate, words_delayed, adaptive_numbering) %>% tidyr::gather() %>% 
   ggplot(aes(value)) + geom_bar() + facet_wrap(~ key, scales = "free")
 ##g_factor
-<<<<<<< HEAD
 "g_factor =~ raven_2015_old + math_2015_old + count_backwards +  words_delayed + adaptive_numbering" %>%
-=======
-"g_factor =~ raven + math + count_backwards +  words_delayed + adaptive_numbering + raven_young_2014 + math_young_2014 + raven2007 + math2007" %>%
->>>>>>> 2783301dafb78ad19b264e61581a0c5b386da73e
-  cfa(missing = "fiml", data = iq, std.lv = T, std.ov = T) -> cfa_g
+cfa(missing = "fiml", data = iq, std.lv = T, std.ov = T) -> cfa_g
 summary(cfa_g)
 
 iq$g_factor = predict(cfa_g)[,1]
 qplot(iq$g_factor)
-<<<<<<< HEAD
-=======
-table(is.na(iq$g_factor))
-# iq = iq %>%
-#   mutate(g_factor = ifelse(is.na(raven), NA, g_factor),
-#          g_factor = ifelse(is.na(math), NA, g_factor),
-#          g_factor = ifelse(is.na(count_backwards), NA, g_factor),
-#          g_factor = ifelse(is.na(words_immediate), NA, g_factor),
-#          g_factor = ifelse(is.na(words_delayed), NA, g_factor),
-#          g_factor = ifelse(is.na(adaptive_numbering), NA, g_factor))
-# qplot(iq$g_factor)
-# table(is.na(iq$g_factor))
-
-iq = iq %>% rename(IQ_age = age.x) %>% select(-age.y)
->>>>>>> 2783301dafb78ad19b264e61581a0c5b386da73e
 ```
 
 
@@ -1154,34 +1124,6 @@ alldata = left_join(alldata, child_labour, by = "pidlink")
 alldata = left_join(alldata, job, by = "pidlink")
 alldata = left_join(alldata, smoking, by = "pidlink")
 
-
-<<<<<<< HEAD
-=======
-### Which values are missing?
-## All data
-alldata_birthorder = alldata_birthorder %>% mutate(old_enough = if_else(age>15, 1, NA_real_))
-
-formr::missingness_patterns(alldata_birthorder %>% select(raven, math, raven_young_2014, math_young_2014, count_backwards, words_immediate, words_delayed, adaptive_numbering, raven2007, math2007, g_factor))
-
-formr::missingness_patterns(alldata_birthorder %>% select(raven, math, count_backwards, words_immediate, words_delayed, adaptive_numbering, big5_ext, riskA, riskB))
-## Intelligence
-formr::missingness_patterns(alldata_birthorder %>% select(raven, math, count_backwards, words_immediate, words_delayed, adaptive_numbering))
-##Personality
-formr::missingness_patterns(alldata_birthorder %>% select(big5_ext, big5_con, big5_open, big5_neu, big5_agree))
-##Risk
-formr::missingness_patterns(alldata_birthorder %>% select(riskA, riskB))
-
-## Nec. vars
-formr::missingness_patterns(alldata_birthorder %>% 
-   select(mother_pidlink, birthorder_naive, count_backwards, raven, math, words_delayed, adaptive_numbering))
-
-formr::missingness_patterns(alldata_birthorder %>% 
-   select(mother_pidlink, birthorder_naive, raven, big5_ext, riskA, age,old_enough))
-formr::missingness_patterns(alldata_birthorder %>% 
-   select(mother_pidlink, birthorder_uterus_alive, g_factor, big5_ext, riskA, age,old_enough))
-formr::missingness_patterns(alldata_birthorder %>% 
-   select(mother_pidlink, birthorder_uterus_alive, raven, big5_ext, riskA, age,old_enough))
->>>>>>> 2783301dafb78ad19b264e61581a0c5b386da73e
 ```
 
 ## Save data
